--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A node and ejs apps to download youtube video server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
